# CUFX

./: .clang-format  .gitignore  README.md
1helloworld/: a.out
2threadmodel/: a.out
3threadid/: a.out  main.cu
4matrixadd/: a.out  main.cu
CUFX/: CMakeLists.txt  README.md  build_run.sh
CUFX/docs/: README.md
CUFX/inc/: CMakeLists.txt
CUFX/inc/data_type/: data_type.cuh
CUFX/inc/data_utils/: cuda_smart_point.cuh  data_random.cuh  data_type.cuh
CUFX/inc/log/: log.cuh
CUFX/inc/matrix/: matrix.cuh
CUFX/inc/operator/: op_external.cuh
CUFX/priv/: CMakeLists.txt
CUFX/priv/runtime/inc/: runtime_info.cuh
CUFX/priv/runtime/src/: runtime_info.cu
CUFX/priv/time/inc/: clock.cuh
CUFX/priv/time/src/: clock.cu
CUFX/scripts/: build.sh  run.sh
CUFX/src/: CMakeLists.txt
CUFX/src/conv/src/: conv.cu
CUFX/src/gemm/src/: gemm.cu
CUFX/src/matrix/: matrix.cu
CUFX/src/reductsum/src/: reduct_sum.cu
CUFX/test/: CMakeLists.txt  main.cu
CUFX/test/inc/: compare.cuh  testcase.cuh
CUFX/test/testcase/: conv_testcase.cu  gemm_testcase.cu  reduct_sum_testcase.cu
CUFX/test/unittest/inc/: compare.cuh  test_case.cuh  test_case.h  test_impl.cuh  test_impl.h
CUFX/test/unittest/src/: compare.cu  test_impl.cpp  test_impl.cu
CudaBase/: README.md
CudaBase/1helloworld/: README.md  main.cu
CudaBase/2threadid/: README.md  main.cu
CudaBase/2threadmodel/: README.md  main.cu
CudaBase/3matrixadd/: README.md  main.cu
CudaBase/4matrixadd/: main.cu
CudaBase/4runtime/: README.md  main.cu
CudaBase/5memorymodel/: CMakeLists.txt  README.md  func.cu  main.cu
CudaBase/6arch/: README.md
CudaBase/7stream/: CMakeLists.txt  README.md  main.cu
CudaBase/8nvprof/: README.md
CudaBase/CUFX/: CMakeLists.txt  build_run.sh
CudaBase/CUFX/priv/inc/log/: log.cuh
CudaBase/CUFX/priv/inc/matrix/: data_type.cuh
CudaBase/CUFX/priv/inc/memory/: memory_alloc.cuh
CudaBase/CUFX/priv/src/memory/: memory_alloc.cu
CudaBase/CUFX/test/: CMakeLists.txt  test_all.cuh
CudaBase/project/: CMakeLists.txt
CudaBase/project/inc/: CMakeLists.txt
CudaBase/project/inc/operator/reductsum/: reduct_sum.cuh
CudaBase/project/priv/inc/log/: log.cuh
CudaBase/project/priv/inc/matrix/: elem_type.cuh  matrix.cuh
CudaBase/project/priv/src/log/: log.cu
CudaBase/project/src/reductsum/: reduct_sum.cu
CudaBase/project/test/: main.cu
CudaBase/project/test/testcase/: reduc_sum_testcase.cu
CudaBase/tools/: common.cuh  matrix.cuh
tools/: common.cuh  matrix.cuh
